<resources>
    <string name="app_name">Word Collector</string>
    <string name="save">Save</string>
    <string name="look_up">Look Up</string>

    <string name="example">supercalifragilisticexpialidocious</string>
    <string name="definition">extraordinarily good; wonderful.</string>
    <string name="item_delete">" has been deleted."</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit Word</string>
    <string name="edit_word">Edit Word</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_word_alert">No Word Entered</string>
    <string name="dialog_message">Add category</string>
    <string name="done">Done</string>
    <string name="add_or_edit_category">Add or edit category</string>
    <string name="new_category_name">New category name</string>
    <string name="empty_category_alert">No category name was entered.</string>
    <string name="add_category">Add Category</string>
    <string name="category">Category:</string>
    <string name="word_is_not_valid">No valid word was entered</string>
    <string name="all">All</string>
    <string name="deleting">Deleting </string>
    <string name="nice_try">Nice try!</string>
    <string name="look_again">Look again!</string>
    <string name="day_night_key">dayNightKey</string>
    <string name="night_mode">Night Mode</string>
    <string name="night_mode_menu_title">Night Mode</string>
    <string name="shared_preferences_file_key">SharedPreferencesFileKey</string>
    <string name="current_selected_category_key">CurrentselectedCategoryKey</string>
    <string name="undo">Undo</string>
    <string name="search">Search</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="look_up_failed">Make sure that you have a browser installed.</string>
    <string name="google_translate_site">
        <![CDATA[https://translate.google.com/#view=home&op=translate&sl=auto&tl=en&text=]]></string>

</resources>
