<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/title_edit_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/edit_word"
                android:scaleType="center"
                android:text="@string/add_category"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:paddingLeft="16dp"/>
        <EditText
                android:id="@+id/new_category_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_category_name"
                android:inputType="text"
        />
    </LinearLayout>
</layout>