<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
    >

        <TextView
                android:id="@+id/title_edit_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/edit_word"
                android:scaleType="center"
                android:text="@string/edit_word"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:paddingStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingLeft="16dp"/>


        <EditText
                android:id="@+id/edited_word"
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/example"
                android:inputType="textAutoCorrect"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_edit_word"
                tools:layout_conversion_absoluteHeight="43dp"
                tools:layout_conversion_absoluteWidth="395dp"
                tools:text="@string/example"/>

        <EditText
                android:id="@+id/edited_definition"
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/definition"
                android:inputType="textAutoCorrect"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edited_word"
                tools:layout_conversion_absoluteHeight="43dp"
                tools:layout_conversion_absoluteWidth="395dp"
                tools:text="@string/definition"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

