<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="word" type="com.yllxh.wordcollector.data.Word"/>
    </data>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="4dp"
            android:layout_margin="8dp"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/word_textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="16dp"
                    tools:text="@string/example"
                    android:text="@{word.word}"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintEnd_toStartOf="@+id/edit_button"
                    card_view:layout_constraintTop_toTopOf="parent"
                    android:layout_marginRight="8dp"/>

            <View
                    android:id="@+id/divider"
                    style="@style/Divider"
                    android:layout_width="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    card_view:layout_constraintTop_toBottomOf="@+id/word_textview"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintEnd_toStartOf="@+id/edit_button"
            />

            <TextView
                    android:id="@+id/definition_textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/definition"
                    android:text="@{word.definition}"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintEnd_toStartOf="@+id/edit_button"
                    card_view:layout_constraintHorizontal_bias="1.0"
                    card_view:layout_constraintTop_toBottomOf="@+id/divider" android:layout_marginTop="16dp"
                    card_view:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_margin="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="16dp"/>
            <ImageButton
                    android:id="@+id/edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/edit_word"
                    android:src="@android:drawable/ic_menu_edit"
                    android:layout_marginTop="16dp"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="16dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>