<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewModel" type="com.yllxh.wordcollector.WordDisplayViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/frameLayout"
            tools:context=".WordDisplayFragment"
    >
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cardView"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:animateLayoutChanges="true"
                app:cardCornerRadius="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        >
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/enter_new_word_cv">

                <EditText
                        android:id="@+id/new_word_editText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:hint="@string/example"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                <EditText
                        android:id="@+id/new_definition_editText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:hint="@string/definition"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/new_word_editText"/>
                <TextView
                        android:id="@+id/save_textView"
                        android:text="@string/save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:onClick="@{() -> viewModel.onSaveNewWord()}"
                        android:layout_marginEnd="24dp"
                        app:layout_constraintEnd_toStartOf="@+id/look_up_textView" android:layout_marginRight="24dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/new_definition_editText"
                        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
                <TextView
                        android:id="@+id/look_up_textView"
                        android:text="@string/look_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:onClick="@{() -> viewModel.onLookUpWord()}"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/new_definition_editText"
                        android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
                <ImageButton
                        android:id="@+id/hideHeaderButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:background="@android:color/transparent"
                        app:layout_constraintTop_toBottomOf="@+id/new_definition_editText"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/ic_arrow_up"
                />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/category_recycleview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:clipToPadding="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" android:layout_marginTop="4dp"
                android:paddingLeft="16dp" android:paddingRight="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/word_recycleview"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:clipToPadding="true"
                app:layout_constraintTop_toBottomOf="@+id/category_recycleview"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:paddingTop="8dp" android:paddingBottom="0dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginBottom="32dp"
                android:clickable="true"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:focusable="true"
                android:animateLayoutChanges="true"
                app:srcCompat="@drawable/ic_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>